# oubliette-shield

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  blog-post.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
demo/: app.py
docs/: index.html
examples/: basic_usage.py  fastapi_app.py  flask_app.py  langchain_chain.py
oubliette_shield/: README.md  __init__.py  agent_policy.py  allama.py  auth_middleware.py  cef_logger.py  config.py  crewai.py  deception.py  drift_monitor.py  dspy_integration.py  ensemble.py  fastapi.py  fastapi_middleware.py  frameworks.py  haystack_integration.py  langchain.py  langgraph.py  litellm.py  llamaindex.py  llm_judge.py  llm_providers.py  ml_client.py  openapi.py  output_scanner.py  pattern_detector.py  pre_filter.py  rate_limiter.py  rbac.py  sanitizer.py  scanners.py  semantic_kernel.py  session.py  storage.py  tenant.py  webhooks.py
oubliette_shield/compliance/: __init__.py  compliance.py  mitre_atlas.md  nist_ai_rmf.md  owasp_llm_top10.md
oubliette_shield/integrations/: __init__.py  langchain.py  llamaindex.py
oubliette_shield/models/: __init__.py  chat_classifier.pkl  chat_feature_pipeline.pkl  chat_feature_pipeline.py  local_inference.py
tests/: test_allama_integration.py  test_cef_logger.py  test_compliance.py  test_deception.py  test_drift_monitor.py  test_fastapi_middleware.py  test_integration.py  test_integrations.py  test_local_ml.py  test_new_sdk_integrations.py  test_openapi.py  test_shield.py  test_shield_storage.py  test_storage.py  test_tenant_rbac.py  test_webhooks.py
