[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oubliette-shield"
version = "0.1.0"
description = "AI LLM Firewall - Protect LLM applications from prompt injection, jailbreak, and adversarial attacks"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "Oubliette Security", email = "info@oubliettesecurity.com" },
]
keywords = [
    "llm", "security", "firewall", "prompt-injection", "jailbreak",
    "ai-safety", "red-team", "honeypot", "adversarial", "defense",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
flask = [
    "flask>=2.3.0",
]
ollama = [
    "ollama>=0.1.0",
]
openai = [
    "openai>=1.0.0",
]
anthropic = [
    "anthropic>=0.40.0",
]
azure = [
    "openai>=1.0.0",
]
bedrock = [
    "boto3>=1.34.0",
]
vertex = [
    "google-cloud-aiplatform>=1.40.0",
]
gemini = [
    "google-generativeai>=0.8.0",
]
all = [
    "flask>=2.3.0",
    "ollama>=0.1.0",
    "openai>=1.0.0",
    "anthropic>=0.40.0",
    "google-generativeai>=0.8.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/oubliettesecurity/oubliette-shield"
Documentation = "https://github.com/oubliettesecurity/oubliette-shield#readme"
Repository = "https://github.com/oubliettesecurity/oubliette-shield"
Issues = "https://github.com/oubliettesecurity/oubliette-shield/issues"

[tool.setuptools.packages.find]
include = ["oubliette_shield*"]
exclude = ["tests*", "test_*", "anomaly-detection*", "AI-CTF*", "threat_intel*"]

[tool.setuptools.package-data]
oubliette_shield = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
